<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<ImageView
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:src="@drawable/home_visual"
		android:scaleType="centerCrop" />

	<RelativeLayout
	    android:layout_width="fill_parent"
		android:layout_height="fill_parent"
	    android:orientation="vertical"
	    android:layout_marginTop="20dp"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="10dp">

	    <LinearLayout
	      android:id="@+id/btn_box"
	      android:layout_width="fill_parent"
	      android:orientation="horizontal">

	        <Button
	          style="@style/day_button"
	          android:id="@+id/btn_day_1"
	          android:drawableStart="@drawable/content_event"
	          android:text="@string/main_saturday" />

	        <Button
	          style="@style/day_button"
	          android:id="@+id/btn_day_2"
	          android:drawableStart="@drawable/content_event"
	          android:text="@string/main_sunday" />

	    </LinearLayout>

	    <LinearLayout
	      android:id="@+id/btn_box_two"
	      android:layout_below="@id/btn_box"
	      android:layout_width="fill_parent"
	      android:layout_height="wrap_content"
	      android:orientation="vertical">
		    <Button
		      style="@style/main_button"
		      android:id="@+id/btn_favorites"
		      android:drawableStart="@drawable/rating_important"
		      android:text="@string/main_favorites" />
		    <Button
		      style="@style/main_button"
		      android:id="@+id/btn_search"
		      android:drawableStart="@drawable/action_search"
		      android:text="@string/main_search" />
		</LinearLayout>

	    <LinearLayout
	      android:id="@+id/status_box"
	      android:layout_below="@id/btn_box_two"
	      android:layout_width="fill_parent"
	      android:orientation="vertical"
	      android:layout_alignParentBottom="true"
	      android:gravity="bottom">
		    <LinearLayout
		      android:layout_width="fill_parent"
		      android:alpha="0.5"
		      android:background="#ffffff"
		      android:padding="5dp"
		      android:orientation="vertical">
			    <TextView
			      android:id="@+id/progress"
			      android:visibility="gone" />
			    <TextView
			      android:id="@+id/db_ver" />
			</LinearLayout>
		</LinearLayout>

	</RelativeLayout>
</FrameLayout>
